# pulsecure

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.analysis.yml  docker-compose.dev.yml  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FHE_GUIDE.md  PRIVACY.md  THREAT_MODEL.md
models/: calibrated_model.json  calibrated_model.rs
python/: pyproject.toml
python/src/: __init__.py  utils.py
python/src/analysis/: __init__.py  evaluate_model.py  feature_analysis.py
python/src/data/: __init__.py  data_loader.py
python/src/export/: __init__.py  exporter.py
python/src/training/: __init__.py  pipeline.py
scripts/: pulsecure-tui.sh
src/: lib.rs  main.rs
src/adapters/: mod.rs  sanitize.rs
src/adapters/opendp/: mod.rs
src/adapters/sqlite/: mod.rs
src/adapters/tfhe/: mod.rs
src/application/: analytics.rs  inference.rs  mod.rs
src/domain/: crypto.rs  diagnosis.rs  kdf.rs  mod.rs  patient.rs
src/ports/: fhe_engine.rs  mod.rs  privacy.rs  storage.rs
src/tui/: app.rs  mod.rs  styles.rs  worker.rs
src/tui/ui/: analytics.rs  dashboard.rs  inference.rs  mod.rs  patient.rs
