[package]
name = "Pulsecure"
version = "0.1.0"
edition = "2021"
authors = ["xoelrdgz"]
description = "Privacy-Preserving Medical ML Pipeline using Fully Homomorphic Encryption"
license = "GPLv3"
repository = "https://github.com/xoelrdgz/Pulsecure"
keywords = ["fhe", "privacy", "machine-learning", "medical", "cryptography"]
categories = ["cryptography", "science"]

[[bin]]
name = "pulsecure"
path = "src/main.rs"

[dependencies]
# FHE
tfhe = { version = "~0.7", features = ["boolean", "shortint", "integer", "seeder_unix"] }

# Serialization
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

# Error handling
thiserror = "~2.0"
anyhow = "~1.0"

# Async runtime
tokio = { version = "~1", features = ["full"] }

# TUI
ratatui = "~0.29"
crossterm = "~0.28"

# Storage
rusqlite = { version = "~0.32", features = ["bundled"] }

# Randomness
rand = "~0.8"
rand_chacha = "~0.3"

# Cryptography
sha2 = "~0.10"
argon2 = "~0.5"
aes-gcm = "~0.10"
ed25519-dalek = "~2.1"
base64 = "~0.22"
zeroize = { version = "~1.7", features = ["derive"] }

# Logging
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Sanitization
regex = "~1.10"

# Date/time
chrono = { version = "~0.4", features = ["serde"] }

# Serialization
bincode = "~1.3"

[dev-dependencies]
# Testing
tempfile = "3.14"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Speed up FHE operations in dev mode
opt-level = 2
