[project]
name = "Pulsecure-ml"
version = "0.1.0"
description = "FHE-compatible ML training pipeline for Pulsecure"
requires-python = ">=3.10"
dependencies = [
    "concrete-ml>=1.8.0,<2.0.0",
    "pandas",
    "kagglehub>=0.2.0",
    "imbalanced-learn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
